<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_homeP">

    <fragment
        android:id="@+id/nav_homeP"
        android:name="com.example.lalala.ui.browse_fragment.BrowseFragmentP"
        android:label="@string/menu_homeP"
        tools:layout="@layout/activity_browse" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lalala.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_follow"
        android:name="com.example.lalala.ui.follow.HistoryFragment"
        android:label="@string/menu_follow"
        tools:layout="@layout/fragment_follow" />

    <fragment
        android:id="@+id/nav_subscribe"
        android:name="com.example.lalala.ui.follow.SubscribeFragment"
        android:label="@string/menu_subscribe"
        tools:layout="@layout/fragment_follow" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.lalala.ui.follow.SubscribeFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_follow" />

    <fragment
        android:id="@+id/nav_dislike"
        android:name="com.example.lalala.ui.follow.SubscribeFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_follow" />

</navigation>