<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/sv_paper"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rl_parent"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:gravity="center_horizontal"
            android:id="@+id/tv_paper_title"
            android:text="论文标题"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:id="@+id/line1"
            android:layout_height="0.5dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/tv_paper_abstract"
            android:layout_marginTop="20dp"
            android:text="论文摘要"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/tv_down"
            android:layout_marginTop="20dp"
            android:text="下载链接："
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/tv_download"
            android:layout_marginTop="10dp"
            android:text="@string/paper_download"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:id="@+id/line2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#000" />



        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/fl_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:flexWrap="wrap">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:paddingRight="10dp"-->
<!--                android:background="@drawable/tag_outline"-->
<!--                android:text="标签1"-->
<!--                android:textSize="18sp"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:paddingRight="10dp"-->
<!--                android:background="@drawable/tag_outline"-->
<!--                android:text="标签211"-->
<!--                android:textSize="18sp"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:paddingRight="10dp"-->
<!--                android:background="@drawable/tag_outline"-->
<!--                android:text="标签31"-->
<!--                android:textSize="18sp"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:paddingRight="10dp"-->
<!--                android:background="@drawable/tag_outline"-->
<!--                android:text="标签1114"-->
<!--                android:textSize="18sp"/>-->
        </com.google.android.flexbox.FlexboxLayout>

        <View
            android:layout_width="match_parent"
            android:id="@+id/line3"
            android:layout_height="0.5dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_suggest"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="推荐标签"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/fl_suggest_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:flexWrap="wrap">

<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="30dp"-->
<!--                android:id="@+id/btn_test_re"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:paddingRight="10dp"-->
<!--                android:background="@drawable/tag_outline"-->

<!--                android:text="标签1114"-->
<!--                android:textSize="18sp"/>-->

        </com.google.android.flexbox.FlexboxLayout>

        <View
            android:layout_width="match_parent"
            android:id="@+id/line4"
            android:layout_height="0.5dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#000" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_add"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="添加标签"/>
        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/fl_add_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:flexWrap="wrap">

<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:paddingRight="10dp"-->
<!--                android:background="@drawable/tag_outline"-->

<!--                android:text="标签1114"-->
<!--                android:textSize="18sp"/>-->
        </com.google.android.flexbox.FlexboxLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:id="@+id/btn_add_tag"
                android:layout_marginLeft="20dp"

                android:layout_marginTop="10dp"
                android:text="@string/paper_add_tag"
                android:onClick="Add_Tag"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:id="@+id/btn_submit"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/btn_add_tag"
                android:text="@string/submit" />
        </RelativeLayout>

    </LinearLayout>


</ScrollView>